// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon #className 1`] = `
<span>
  <svg
    className="icon icon-test u-test"
    viewBox="0 0 24 24"
  >
    <use
      href="[object Object]#icon-test"
    />
  </svg>
</span>
`;

exports[`Icon #name 1`] = `
<span>
  <svg
    className="icon icon-test "
    viewBox="0 0 24 24"
  >
    <use
      href="[object Object]#icon-test"
    />
  </svg>
</span>
`;

exports[`Icon #title 1`] = `
<span>
  <svg
    className="icon icon-test "
    viewBox="0 0 24 24"
  >
    <use
      href="[object Object]#icon-test"
    />
  </svg>
  <span
    className="visuallyhidden"
  >
    Test title
  </span>
</span>
`;
